# RACCEX

./: .gitignore  ChangeLog  Makefile  Makefile.in  README  README.md  compilation.out  config.status  configure  configure.ac  configure.scan  ltrace.out  out.txt  test.out
autom4te.cache/: output.1  traces.0  traces.1
benchmarks/: make_plots.py  make_plots_cpu_send_recv.py  make_plots_reduction.py
benchmarks/cpu_utilization/: inf.sh
benchmarks/read_write/: run_card.sh  scif_read.c
benchmarks/send_recv/: run_sendrecv_64k.sh  scif-test.cpp
benchmarks/shoc-mic/: Reduction.coilog  run_reduction.sh
common/strace.out/: dung_strace.out  micnative_ltrace.out  micnative_strace.out  test.out
debug/: .native_strace.less.swp  .rphi2_strace.less.swp  client-strace-less.out  client_full_strace.out  native-strace-less.out  native_full_strace.out  native_strace.less  rphi-strace-less.out  rphi2_strace.less  rphi_strace.less
scif_benchmarks/: make_plots.py  make_plots_read_write.py  make_plots_reduction.py
scif_benchmarks/cpu_utilization/: proc.py  run_cpu_util_sendrecv.sh  test_1.sh  test_4.sh  test_scif.sh
scif_benchmarks/cpu_utilization_sgerag/: test_2.sh
scif_tutorials/: .README.txt.swp  COPYING  Makefile  README.txt  launch.sh  scif_accept.c  scif_accept_host  scif_accept_launch.c  scif_accept_launch_host  scif_accept_launch_mic  scif_accept_mic  scif_accept_multiple.c  scif_accept_multiple_host  scif_accept_multiple_mic  scif_accept_poll.c  scif_accept_poll_host  scif_accept_poll_mic  scif_accept_readwrite.c  scif_accept_readwrite_host  scif_accept_readwrite_mic  scif_accept_register.c  scif_accept_register_host  scif_accept_register_mic  scif_accept_ringbuffer.c  scif_accept_ringbuffer_host  scif_accept_ringbuffer_mic  scif_accept_rma_fence.c  scif_accept_rma_fence_host  scif_accept_rma_fence_mic  scif_accept_rma_fork.c  scif_accept_rma_fork_host  scif_accept_rma_fork_mic  scif_accept_rma_mmap.c  scif_accept_rma_mmap_host  scif_accept_rma_mmap_mic  scif_accept_rma_register.c  scif_accept_rma_register_host  scif_accept_rma_register_mic  scif_accept_vreadwrite.c  scif_accept_vreadwrite_host  (+47 more)
src/: .libscifapiwrapper.c.swp  .process.c.swp  .protocol.c.swp  .protocol.h.swp  .test_server.c.swp  Makefile  Makefile.am  Makefile.debug  Makefile.in  client.c  client.c.orig  client.h  client_proto_example.c  common.c  common.c.orig  common.h  common.h.orig  common.pb-c.c  common.pb-c.h  common.proto  common_BASE_7278.c  communication.c  count_threads  count_threads.cpp  cscope.out  hello.c  hello_world.c  libcoi_host.so.0  libcoitracelib.so.0  libscif.so.0  libscif.so.0.0.1  libscifapiwrapper.c  phi_errors.c  process.c  process.h  protocol.c  protocol.h  server  server.c  skipList.c  (+8 more)
src/.deps/: client.Po  common.Po  common.pb-c.Po  hello_world-hello_world.Po  libscifapiwrapper.Po  libscifapiwrapper_so-client.Po  libscifapiwrapper_so-common.Po  libscifapiwrapper_so-common.pb-c.Po  libscifapiwrapper_so-libscifapiwrapper.Po  libscifapiwrapper_so-process.Po  libscifapiwrapper_so-protocol.Po  process.Po  protocol.Po  server-common.Po  server-process.Po  server-protocol.Po  server-server.Po  server.Po  test-client.Po  test_client.Po  test_server.Po
src/demo/: .client.c.swp  .server.c.swp  Makefile  client_proto_example.c  server_protobuf.c
src/drivers/: .dev_driver.ko.cmd  .dev_driver.mod.o.cmd  .dev_driver.o.cmd  Makefile  dev_driver.c  dev_driver.ko  dev_driver.mod.c  modules.order
src/drivers/.tmp_versions/: dev_driver.mod
src/include/: client.h  common.h  libscifapiwrapper.h  process.h  protocol.h  timer.h
src/include/.deps/: common.pb-c.Po  libscifapiwrapper_so-common.pb-c.Po
src/initial/: hello_world
src/kernel_modules/: .kobject_example.ko.cmd  .kobject_example.mod.o.cmd  .kobject_example.o.cmd  .sample_driver.ko.cmd  .sample_driver.mod.o.cmd  .sample_driver.o.cmd  Makefile  kobject_example.c  kobject_example.ko  kobject_example.mod.c  modules.order  sample_driver.c  sample_driver.ko  sample_driver.mod.c
src/kernel_modules/.tmp_versions/: kobject_example.mod  sample_driver.mod
src/protobuf/: common.pb-c.c  common.pb-c.h  common.proto
src/protobuf/example/: .Makefile.swp  Makefile  example_deserializer.c
src/scif_api/: .scif.h.swp  .scif_api.c.swp  scif.h  scif_api.c  tags
src/sysfs_info/: GetMICArch.cpp
src/testing/: test-client.c  test_client  test_server.c
(+1538 files in other folders)
